# test-task-monitoring-service

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  manage.py  mypy.ini  pyproject.toml  worker.py
.github/workflows/: docker-image.yml
mservice/: dependencies.py  parser.py  requester.py  scheduler.py  settings.py  utils.py
mservice/api/: __init__.py  monitors.py
mservice/database/: base.py  migration.py  models.py  monitor_dao.py
mservice/schema/: metrics.py
pytests/: conftest.py  test_parser.py  test_requester.py
pytests/api/: conftest.py  test_monitor_api.py
pytests/db/: test_monitor_dao.py
pytests/scheduler/: test_sync_item.py
