[tool.poetry]
name = "testtaskurlchecker"
version = "0.1.0"
description = "Test Task: URL status checker"
authors = ["Stanislav Gonorovsky <drmozg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { version = "0.100.0", extras = ["all"] }
uvicorn = "0.23.1"
asyncpg = "0.28.0"
click = "8.1.6"

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.0"
pytest-mock = "3.11.1"
pytest-cov = "4.1.0"
pytest-dotenv = "0.5.2"
pre-commit = "3.3.3"

[tool.pytest.ini_options]
asyncio_mode = "strict"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(filename)s:%(lineno)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
env_files = ["test.env"]
testpaths = ["pytests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
